[package]
name = "MysticOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic 
                # By doing this, we disable unwinding 
                # (and need for other language items)

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
